Changes for v4.1.0-Beta external push (#35)

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -18,7 +18,7 @@ ARG http_proxy
 ARG https_proxy
 ARG no_proxy
 ARG GO_VERSION=1.16.7
-ARG ISECLRELEASEBRANCH=refs/tags/v4.0.1
+ARG ISECLRELEASEBRANCH=refs/tags/v4.1.0-Beta
 ARG EXT_USER
 ARG REGISTRY_MIRROR_URL
 
